[gd_scene load_steps=35 format=3 uid="uid://cim101ucrgn1h"]

[ext_resource type="Script" uid="uid://bydms7u2b66l0" path="res://players/script/player.gd" id="1_e5xbn"]
[ext_resource type="Texture2D" uid="uid://coem30gi420lg" path="res://assets/sprites/player/Basic Charakter Spritesheet.png" id="1_quefe"]
[ext_resource type="Resource" uid="uid://brh3o1wprqeed" path="res://players/playerInventory.tres" id="2_bk46q"]
[ext_resource type="Texture2D" uid="uid://dxa2nu10wsejp" path="res://assets/sprites/player/Basic Charakter Actions.png" id="3_5illy"]
[ext_resource type="PackedScene" uid="uid://c7sb6btg00rnk" path="res://core/others/ui&ux/inventory/inventory_gui/inventory_gui.tscn" id="3_c5kcn"]
[ext_resource type="Script" uid="uid://416qwcmpuvqw" path="res://players/script/player_ui_handler.gd" id="3_sm8cc"]
[ext_resource type="PackedScene" uid="uid://bjm82fb6phvl0" path="res://core/others/ui&ux/frame_gui/frame_gui.tscn" id="5_7plpn"]
[ext_resource type="PackedScene" uid="uid://dp4ekqqe0xbmn" path="res://core/others/ui&ux/plant_seed_gui/plant_seed_gui.tscn" id="7_l1fvc"]
[ext_resource type="Texture2D" uid="uid://bjcrrul01wftt" path="res://assets/ui&ux/E.png" id="9_0yn0j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0yn0j"]
atlas = ExtResource("3_5illy")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogrlw"]
atlas = ExtResource("3_5illy")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5xbn"]
atlas = ExtResource("1_quefe")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5kcn"]
atlas = ExtResource("1_quefe")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm8cc"]
atlas = ExtResource("1_quefe")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7plpn"]
atlas = ExtResource("1_quefe")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk46q"]
atlas = ExtResource("1_quefe")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdiai"]
atlas = ExtResource("1_quefe")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_apxtp"]
atlas = ExtResource("1_quefe")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo5aj"]
atlas = ExtResource("1_quefe")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1d84"]
atlas = ExtResource("1_quefe")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm8tu"]
atlas = ExtResource("1_quefe")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci3lo"]
atlas = ExtResource("1_quefe")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl6np"]
atlas = ExtResource("1_quefe")
region = Rect2(144, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_dh704"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yn0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogrlw")
}],
"loop": true,
"name": &"hoe_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5xbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5kcn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7plpn")
}],
"loop": true,
"name": &"idle_backward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk46q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdiai")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apxtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo5aj")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1d84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm8tu")
}],
"loop": true,
"name": &"walk_backward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci3lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl6np")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_quefe"]
size = Vector2(10, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogrlw"]
bg_color = Color(0, 0, 0, 0.45098)

[sub_resource type="CircleShape2D" id="CircleShape2D_sm8cc"]
radius = 11.0454

[sub_resource type="Animation" id="Animation_0yn0j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5illy"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_lpvu1"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333, 0.666, 0.99),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1]
}

[sub_resource type="Animation" id="Animation_1jwom"]
resource_name = "walk_backward"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333, 0.666, 0.99),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1]
}

[sub_resource type="Animation" id="Animation_0d8xx"]
resource_name = "walk_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333, 0.666, 0.99),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1]
}

[sub_resource type="Animation" id="Animation_ogrlw"]
resource_name = "walk_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333, 0.666, 0.99),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ogrlw"]
_data = {
&"RESET": SubResource("Animation_0yn0j"),
&"idle": SubResource("Animation_5illy"),
&"walk": SubResource("Animation_lpvu1"),
&"walk_backward": SubResource("Animation_1jwom"),
&"walk_left": SubResource("Animation_0d8xx"),
&"walk_right": SubResource("Animation_ogrlw")
}

[node name="Player" type="CharacterBody2D"]
top_level = true
script = ExtResource("1_e5xbn")
inventory = ExtResource("2_bk46q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dh704")
animation = &"walk_side"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_quefe")

[node name="PlayerUI" type="CanvasLayer" parent="."]
script = ExtResource("3_sm8cc")

[node name="InventoryGUI" parent="PlayerUI" instance=ExtResource("3_c5kcn")]
visible = false

[node name="FrameGUI" parent="PlayerUI" instance=ExtResource("5_7plpn")]
script = null

[node name="PlantSeedGUI" parent="PlayerUI" instance=ExtResource("7_l1fvc")]

[node name="Interact" type="TextureRect" parent="PlayerUI"]
visible = false
offset_left = -10.0
offset_top = -31.0
offset_right = 10.0
offset_bottom = -11.0
texture = ExtResource("9_0yn0j")

[node name="Panel" type="Panel" parent="PlayerUI"]
visible = false
z_index = 25
offset_left = -10.0
offset_top = -31.0
offset_right = 10.0
offset_bottom = -11.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ogrlw")

[node name="ProgressBar" type="ProgressBar" parent="PlayerUI"]
visible = false
offset_left = -14.0
offset_top = -16.0
offset_right = 15.0
offset_bottom = -9.0
show_percentage = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_sm8cc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5.5, 5.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ogrlw")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
